kong-ingress-controller-http/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong-http
spec:
  controller: ingress-controllers.konghq.com/kong-http
