kong-ingress-controller-http/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway-http
  namespace: public-gateway
spec:
  gatewayClassName: kong-class-http
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway-http-testing
  namespace: public-gateway
spec:
  gatewayClassName: kong-class-http
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  addresses:
    - type: Hostname
      value: tajawal.com
